--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ function Card({ card }) {
         </section>
         <section>
           <h2>
-            Можно считать через метрики AST
+            Мерить через метрики AST
           </h2>
           <p>Tracking health over debt</p>
         </section>
