--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <section>
           <img src="img/logo.svg" style="width: 60vw;" alt="Логотип компании &laquo;МойОфис&raquo;">
         </section>
+        <section>
+          <img src="img/holyjs.svg" alt="">
+        </section>
         <section data-background="img/previous.png" >
           <h2 style="background: rgba(255,255,255, 0.6); padding: 0.5em; backdrop-filter: blur(4px);font-weight: 700">Рефакторинг клиентского кода или как отрефакторить миллион строк кода и не сойти с ума</h2>
         </section>
@@ -185,7 +188,7 @@
           <p>Refactoring is a controlled <mark>technique</mark> for improving the design of an existing code base. Its essence is <mark>applying</mark> a series of <mark>small behavior-preserving transformations</mark>, each of which "too small to be worth doing". </p>
         </section>
         <section>
-          <h2>Грубое описание</h2>
+          <h2>План</h2>
           <ol>
             <li class="fragment">Найти &laquo;Код с душком&raquo;</li>
             <li class="fragment">Применить рефакторинг</li>
@@ -265,7 +268,7 @@ function Card({ card }) {
           <img src="img/request.png" alt="">
         </section>
         <section>
-          <h2>Об проблемах в реальном времени</h2>
+          <h2>О проблемах в реальном времени</h2>
           <ul>
             <li><a href="https://www.sonarsource.com/products/sonarlint/">SonarLint</a></li>
             <li><a href="https://github.com/SonarSource/eslint-plugin-sonarjs">eslint-plugin-sonarjs</a></li>
@@ -474,7 +477,7 @@ function Card({ card }) {
         <section data-background-color="tomato">
           <h1>Ошибка 3: субъективность</h1>
           <p class="fragment">Субъективная оценка</p>
-          <p class="fragment">Ссылка на принцыпы в качестве аргумента</p>
+          <p class="fragment">Ссылка на принципы в качестве аргумента</p>
         </section>
         <section>
           Некоторые принципы все-таки можно использовать
@@ -593,16 +596,17 @@ $ npx code-complexity . --sort=score --limit=3
         </section>
         <section>
           <h3>Спасибо!</h3>
-          <div style="display: flex; flex-direction: row;">
+          <div style="display: flex; flex-direction: row; justify-items: center; align-items: center; justify-content: center; ">
             <div>
+              <img style="width: 15vw;" src="img/qr_2.png" alt="">
               <p>Отзыв</p>
-              <img src="img/qr.jpeg" alt="">
             </div>
             <div>
+              <img style="width: 15vw;"  src="img/qr.png" alt="">
               <p>Слайды</p>
-              <img src="img/qr.jpeg" alt="">
             </div>
           </div>
+          <p>Алексей Золотых &mdash; @zolotyh</p>
         </section>
       </div>
     </div>
