--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ function Card({ card }) {
         <section data-background-color="tomato">
           <h1>Ошибка 1: недопонимание</h1>
           <p class="fragment">Разное понимание задачи</p>
-          <p class="fragment">Разрабочик: нужно переписать на хуки</p>
+          <p class="fragment">Разработчик: нужно переписать на хуки</p>
           <p class="fragment">Тимлид: нужно сделать код чище</p>
         </section>
         <section data-background="#0c0c0c">
