--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@ function Card({ card }) {
           <h2>Подмена понятий и плохое описание задачи</h2>
           <p>Переписать на хуки != отрефакторить</p>
         </section>
-        <section data-background-color="tomato">
+        <section data-background-color="#fff204">
           <h1>Ошибка 1: недопонимание</h1>
           <p class="fragment">Разное понимание задачи</p>
           <p class="fragment">Разработчик: нужно переписать на хуки</p>
-          <p class="fragment">Тимлид: нужно сделать код чище</p>
+          <p class="fragment">Ревьювер: нужно сделать код чище</p>
         </section>
         <section data-background="#0c0c0c">
           <h1>2. Проблема с самооценкой и долгий путь не туда</h1>
@@ -342,7 +342,7 @@ function Card({ card }) {
         <section data-background="img/dart.jpeg" data-background-color="#000000">
           <h3 style="backdrop-filter: blur(4px);font-weight: 700">Прошло всего 3 недели...</h3>
         </section>
-        <section data-background-color="tomato">
+        <section data-background-color="#fff204">
           <h1>Ошибка 2: оставили одного</h1>
           <p class="fragment">Нужно чаще синхронизироваться</p>
         </section>
@@ -486,7 +486,7 @@ function Card({ card }) {
 }
           </code></pre>
         </section>
-        <section data-background-color="tomato">
+        <section data-background-color="#fff204">
           <h1>Ошибка 3: субъективность</h1>
           <p class="fragment">Субъективная оценка</p>
           <p class="fragment">Ссылка на принципы в качестве аргумента</p>
@@ -500,25 +500,25 @@ function Card({ card }) {
           </p>
           <img style="height: 10em" src="img/1.png" alt="">
         </section>
-        <section>
+        <section data-background-color="#fbf7f6">
           <p>
             1. Идеальная ситуация
           </p>
           <img style="height: 10em;" src="img/2.png" alt="">
         </section>
-        <section>
+        <section data-background-color="#fbf7f6">
           <p>
             2. Все в одном
           </p>
           <img style="height: 10em;" src="img/3.png" alt="">
         </section>
-        <section>
+        <section data-background-color="#fbf7f6">
           <p>
             3. Неправильные границы
           </p>
           <img style="height: 10em;" src="img/4.png" alt="">
         </section>
-        <section>
+        <section data-background-color="#fbf7f6">
           <p>
             4. Мастер SOLID
           </p>
@@ -580,7 +580,7 @@ $ npx code-complexity . --sort=score --limit=3
 └──────────────────────────────┴────────────┴───────┴───────┘
           </code></pre>
         </section>
-        <section data-background-color="tomato">
+        <section data-background-color="#fff204">
           <h1>Ошибка 4: метрики</h1>
           <p class="fragment">Не было метрик</p>
         </section>
