--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
           <img src="img/sova.png" alt="">
             <p>Ты сделал код хуже!</p>
         </section>
+        <section>А что, если попробовать разобраться?</section>
         <section data-background-image="./img/luck1.jpg" data-background-position="bottom" data-transition="slide">&nbsp;</section>
         <section data-background-image="./img/luck2.jpg" data-background-position="bottom" data-transition="slide" >&nbsp;</section>
         <section data-background-image="./img/luck3.jpg" data-background-position="bottom" data-transition="slide" >&nbsp;</section>
         <section data-background-image="./img/luck4.jpg" data-background-position="bottom" data-transition="slide" >&nbsp;</section>
         <section data-background-image="./img/luck5.jpg" data-background-position="bottom" data-transition="slide" >&nbsp;</section>
-        <section>А что, если попробовать разобраться?</section>
         <section>
           <img src="img/jira.png" alt="">
         </section>
@@ -394,7 +394,7 @@ Programs must be written for people to read, and only incidentally for machines 
           <h2>Давайте на примере!</h2>
         </section>
         <section>
-          <h2>SLA single layer of abstraction</h2>
+          <h2>Single layer of abstraction (SLA)</h2>
           <p>Каждый метод должен быть написан в терминах одного уровня абстракции</p>
           <aside class="notes">
             Пример со скоростью и с передачей и оборотами
